[project]
name = "heimdall-backend"
version = "0.1.0"
description = ""
authors = [{ name = "Marcos Queiroz", email = "marcosamfq123@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi[standard] (>=0.135.1,<0.136.0)",
  "alembic (>=1.18.4,<2.0.0)",
  "sqlalchemy (>=2.0.48,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["ruff (>=0.15.5,<0.16.0)", "taskipy (>=1.14.1,<2.0.0)"]

[tool.ruff]
line-length = 79

extend-exclude = ['migrations']
[tool.ruff.lint]
preview = true
select = ["I", "E", "F", "W", "PL"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .'

pre_format = 'ruf check --fix'
format = 'ruff format .'

run = 'fastapi dev heimdall_backend/main.py'
